--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-Ciao sono Lucia e non sono una sirena
-Mangio le polpette e ho mal di schiena
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Titolo della pagina</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <h1>Intestazione</h1>
+  <p>Paragrafo</p>
+</body>
+
+</html>
