--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Storia sulle piante</title>
+	<title>Azienda di Trasporti</title>
 	<style>
 		body {
-			background-color: green;
-			color: white;
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-		}
-
-		h1 {
-			text-align: center;
-			margin-top: 50px;
-			font-size: 3em;
-		}
-
-		p {
-			font-size: 1.2em;
-			margin: 30px;
-			line-height: 1.5;
+			background-color: blue;
 		}
 	</style>
 </head>
 <body>
-	<h1>La meraviglia delle piante</h1>
-	<p>Le piante sono esseri viventi incredibili. Con la loro capacità di fotosintesi, sono in grado di produrre l'ossigeno che respiriamo e di assorbire la CO2 che rilasciamo nell'atmosfera. Inoltre, molte piante hanno proprietà curative e vengono utilizzate in medicina da secoli.</p>
-	<p>Le piante sono anche importanti per l'agricoltura e l'alimentazione umana. Coltiviamo cereali, verdure e frutti dalle piante e utilizziamo legno e fibre per costruire e creare oggetti utili. Ma le piante non sono solo utili: sono anche belle da vedere e ci offrono piacevoli sensazioni attraverso il loro profumo e il loro aspetto.</p>
-	<p>Infine, le piante hanno un ruolo fondamentale nell'ecosistema terrestre. Sono la base della catena alimentare e forniscono il nutrimento per gli animali che popolano il nostro pianeta. Senza le piante, la vita come la conosciamo non sarebbe possibile.</p>
-	<p>Concludiamo quindi che le piante sono essenziali per la vita e la loro bellezza ci offre un ulteriore motivo per apprezzarle e proteggerle.</p>
+	<header>
+		<h1>Azienda di Trasporti</h1>
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Servizi</a></li>
+				<li><a href="#">Contatti</a></li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<h2>Benvenuti all'Azienda di Trasporti</h2>
+		<p>Descrizione dell'azienda e dei servizi offerti.</p>
+		<h3>Servizi</h3>
+		<ul>
+			<li>Trasporto merci</li>
+			<li>Trasporto persone</li>
+			<li>Logistica</li>
+		</ul>
+		<h3>Contatti</h3>
+		<ul>
+			<li>Indirizzo: Via dei Trasporti, 123</li>
+			<li>Telefono: 0123456789</li>
+			<li>Email: info@aziendaditrasporti.it</li>
+		</ul>
+	</main>
+	<footer>
+		<p>&copy; Azienda di Trasporti 2023</p>
+	</footer>
 </body>
 </html>
+
