--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
 		body {
 			background-color: blue;
 		}
+		header img {
+			width: 200px;
+			height: auto;
+			margin: 10px;
+		}
+		main {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+			align-items: center;
+		}
+		main img {
+			width: 300px;
+			height: auto;
+			margin: 20px;
+		}
 	</style>
 </head>
 <body>
 	<header>
-		<h1>Azienda di Trasporti</h1>
+		<img src="logo.png" alt="Logo Azienda di Trasporti">
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
@@ -20,24 +36,12 @@
 		</nav>
 	</header>
 	<main>
-		<h2>Benvenuti all'Azienda di Trasporti</h2>
-		<p>Descrizione dell'azienda e dei servizi offerti.</p>
-		<h3>Servizi</h3>
-		<ul>
-			<li>Trasporto merci</li>
-			<li>Trasporto persone</li>
-			<li>Logistica</li>
-		</ul>
-		<h3>Contatti</h3>
-		<ul>
-			<li>Indirizzo: Via dei Trasporti, 123</li>
-			<li>Telefono: 0123456789</li>
-			<li>Email: info@aziendaditrasporti.it</li>
-		</ul>
+		<img src="trasporto-merci.jpg" alt="Trasporto merci">
+		<img src="trasporto-persone.jpg" alt="Trasporto persone">
+		<img src="logistica.jpg" alt="Logistica">
 	</main>
 	<footer>
 		<p>&copy; Azienda di Trasporti 2023</p>
 	</footer>
 </body>
 </html>
-
