--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Azienda Trasporti</title>
+	<title>Zambano Trasporti</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
-		<h1>Azienda Trasporti</h1>
+		<h1>Zambano Trasporti</h1>
 		<nav>
 			<ul>
 				<li><a href="#servizi">Servizi</a></li>
@@ -42,9 +42,9 @@
 			<p>Per maggiori informazioni sui nostri servizi, contattaci:</p>
 			<ul>
 				<li>Email: info@aziendatrasporti.com</li>
-				<li>Telefono: +39 0123456789</li>
-				<li>Indirizzo: Via dei Trasporti, 1</li>
-				<li>Città: Roma</li>
+				<li>Telefono: 011 3589502</li>
+				<li>Indirizzo: Via Carso, 10, 10092 Beinasco (TO)</li>
+				<li>Città: Beinasco</li>
 			</ul>
 		</section>
 	</main>
