--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 				<li><a href="#servizi">Servizi</a></li>
 				<li><a href="#flotta">Flotta</a></li>
 				<li><a href="#contatti">Contatti</a></li>
+			<li><a href="#contatti">Galleria</a></li>
+			  
 			</ul>
 		</nav>
 	</header>
@@ -39,7 +41,9 @@
 				<li>Furgoni refrigerati</li>
 			</ul>
 		</section>
-		<section id="contatti">
+		<section id="Galleria">
+			<h2>Galleria</h2>
+      <section id="contatti">
 			<h2>Contatti</h2>
 			<p>Per maggiori informazioni sui nostri servizi, contattaci:</p>
 			<ul>
