--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		</nav>
 	</header>
 	<main>
-		<section id="servizi">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2821.077017261747!2d7.599193415755492!3d45.003057872114994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47881384c7cbb1a1%3A0xa7f721b3220914cf!2sVia%20Carso%2C%2010%2C%2010092%20Borgaretto%20TO!5e0!3m2!1sit!2sit!4v1679865072754!5m2!1sit!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"  referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section id="servizi">
 			<h2>Servizi</h2>
 			<p>Offriamo servizi di trasporto su strada e su ferrovia per merci di ogni genere.</p>
 			<ul>
@@ -43,6 +44,12 @@
 		</section>
 		<section id="Galleria">
 			<h2>Galleria</h2>
+      <div class="container-img">
+  <img src="immagine1.jpg">
+  <img src="immagine2.jpg">
+  <img src="immagine3.jpg">
+</div>
+
       <section id="contatti">
 			<h2>Contatti</h2>
 			<p>Per maggiori informazioni sui nostri servizi, contattaci:</p>
