--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
       margin: 0;
       padding: 0;
     }
+
+    /* Stili per il logo */
+    .container {
+      text-align: center;
+    }
+
+    .logo {
+      display: block;
+      margin: 2 auto;
+    }
+
+    .title {
+      text-align: left;
+      margin-top: 70px;
+      font-size: 60px;
+      color: #2a2c47;
+    }
+
     /* Aggiungi altri stili CSS per il tuo contenuto */
   </style>
 </head>
@@ -33,6 +51,9 @@
     <h1 style="color:white; font-family: 'Water Brush', sans-serif;">Benvenuti nella nostra azienda</h1>
     <p style="color:white;">L'azienda Zambano Trasporti è un'azienda famigliare attualmente appartenente al geometra Anselmo Zambano. Questa società si trova in Via Carso, 10 fraz. Borgaretto, 10092 Beinasco (TO). L'azienda si occupa di trasporti di oggetti pesanti di diverso tipo.</p>
   </main>
+</body>
+</html>
+
 
   <style>
     body {
@@ -268,5 +289,4 @@ body {
     </div>
   </div>
 </body>
-
 
