--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       font-size: 60px;
       color: #2a2c47;
     }
-<Link rel= "stylesheet" href="style.css"
+<Link rel= "stylesheet" href="style.css">
     /* Aggiungi altri stili CSS per il tuo contenuto */
   </style>
 </head>
