--- a/index.html
+++ b/index.html
@@ -4,31 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <style>
-    body {
-      background-color: #ffff; /* Imposta il colore di sfondo grigio */
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Stili per il logo */
-    .container {
-      text-align: center;
-    }
-
-    .logo {
-      display: block;
-      margin: 2 auto;
-    }
-
-    .title {
-      text-align: left;
-      margin-top: 70px;
-      font-size: 60px;
-      color: #2a2c47;
-    }
+ 
 <Link rel= "stylesheet" href="style.css">
-    /* Aggiungi altri stili CSS per il tuo contenuto */
+ 
   </style>
 </head>
 <body>
@@ -110,9 +88,7 @@
 </html>
 
 
-  <h1 style="color:black; text-align: center">I nostri lavori</h1>
-
- 
+<h1 style="color:black; text-align: center">Dove siamo</h1>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slideshow di immagini</title>
@@ -289,4 +265,48 @@ body {
     </div>
   </div>
 </body>
+ <h1 style="color:black; text-align: center">Dove siamo</h1>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .image-container {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .image-container img {
+      width: 25%; /* Imposta la larghezza desiderata dell'immagine */
+      height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni originali */
+      max-width: 100%;
+      max-height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <div class="image-container">
+    <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
+  </div>
+</body>
+<h1 style="color:black; text-align: center">Contatti</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .copyright {
+      background-color: #2a2c47;
+      color: #fff;
+      padding: 30px;
+      text-align: center;
+      font-size: 19px;
+    }
+  </style>
+</head>
+<body>
+  <div class="copyright">
+    &copy; 2023 Zambano Trasporti. Tutti i diritti riservati.
+  </div>
+</body>
+
 
