--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
-<Link rel= "stylesheet" href="style.css">
+
  
   </style>
 </head>
@@ -265,7 +265,6 @@ body {
     </div>
   </div>
 </body>
- <h1 style="color:black; text-align: center">Dove siamo</h1>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -274,39 +273,166 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-bottom: 30px;
     }
 
     .image-container img {
-      width: 25%; /* Imposta la larghezza desiderata dell'immagine */
-      height: auto; /* Imposta l'altezza automaticamente per mantenere le proporzioni originali */
+      width: 25%;
+      height: auto;
       max-width: 100%;
       max-height: 100%;
     }
-  </style>
-</head>
-<body>
-  <div class="image-container">
-    <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
-  </div>
-</body>
-<h1 style="color:black; text-align: center">Contatti</h1>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
+
+    .contact-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: transparent;
+      margin-top: 20px;
+      margin-bottom: 30px;
+    }
+
+    .contact-container .container {
+      display: flex;
+      flex-wrap: wrap;
+      max-width: 900px;
+      background-color: #f1f1f1;
+      border-radius: 5px;
+      overflow: hidden;
+      padding: 20px;
+    }
+
+    .contact-container .sidebar {
+      flex: 1;
+      padding: 30px;
+      background-color: #344d83;
+      color: white;
+    }
+
+    .contact-container .sidebar .contact-info {
+      margin-bottom: 20px;
+    }
+
+    .contact-container .sidebar .contact-info h3 {
+      margin-top: 0;
+    }
+
+    .contact-container .sidebar .contact-info p {
+      margin: 10px 0;
+    }
+
+    .contact-container .sidebar .contact-info a {
+      display: block;
+      margin-bottom: 5px;
+    }
+
+    .contact-container .contact-form-container {
+      flex: 1;
+      padding: 30px;
+      background-color: white;
+    }
+
+    .contact-container .contact-form-container h2 {
+      margin-bottom: 20px;
+    }
+
+    .contact-container .contact-form-container .form-group {
+      margin-bottom: 20px;
+    }
+
+    .contact-container .contact-form-container .form-group label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .contact-container .contact-form-container .form-group input[type="text"],
+    .contact-container .contact-form-container .form-group textarea {
+      width: 100%;
+      padding: 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    .contact-container .contact-form-container .form-group button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #344d83;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    @media screen and (max-width: 600px) {
+      .contact-container .container {
+        flex-direction: column;
+        padding: 20px;
+      }
+
+      .contact-container .sidebar {
+        padding: 20px;
+        margin-bottom: 20px;
+      }
+
+      .contact-container .contact-form-container {
+        padding: 20px;
+      }
+    }
+
     .copyright {
       background-color: #2a2c47;
       color: #fff;
       padding: 30px;
       text-align: center;
       font-size: 19px;
+      margin-top: 30px;
     }
   </style>
 </head>
 <body>
+  <h1 style="color:black; text-align: center">Dove siamo</h1>
+
+  <div class="image-container">
+    <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
+  </div>
+
+  <div class="contact-container">
+    <div class="container">
+      <div class="sidebar">
+        <div class="contact-info">
+          <h3>Contatti</h3>
+          <p>Telefono: 123456789</p>
+          <p>Email: info@example.com</p>
+          <a href="https://www.instagram.com/">Instagram</a>
+          <a href="https://www.facebook.com/">Facebook</a>
+        </div>
+      </div>
+      <div class="contact-form-container">
+        <h2>Contattaci per maggiori informazioni</h2>
+        <form action="#" method="post">
+          <div class="form-group">
+            <label for="name">Nome:</label>
+            <input type="text" id="name" name="name" placeholder="Inserisci il tuo nome" required>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="text" id="email" name="email" placeholder="Inserisci la tua email" required>
+          </div>
+          <div class="form-group">
+            <label for="message">Messaggio:</label>
+            <textarea id="message" name="message" placeholder="Inserisci il tuo messaggio" required></textarea>
+          </div>
+          <div class="form-group">
+            <button type="submit">Invia</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <div class="copyright">
     &copy; 2023 Zambano Trasporti. Tutti i diritti riservati.
   </div>
 </body>
-
-
