--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Titolo della pagina</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
  
-<link rel="stylesheet" href="style.css">
+
  
   </style>
 </head>
@@ -17,20 +17,29 @@
 
   <nav class="menu">
     <ul>
-      <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#"><i class="fas fa-camera-retro"></i> I nostri lavori</a></li>
-      <li><a href="#"><i class="fas fa-industry"></i> Servizi</a></li>
-      <li><a href="#"><i class="fas fa-map-marker-alt"></i> Dove trovarci</a></li>
-      <li><a href="#"><i class="fas fa-envelope"></i> Contatti</a></li>
+      <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+      <li><a href="#lavori"><i class="fas fa-camera-retro"></i> I nostri lavori</a></li>
+      <li><a href="#servizi"><i class="fas fa-industry"></i> Servizi</a></li>
+      <li><a href="#dove"><i class="fas fa-map-marker-alt"></i> Dove trovarci</a></li>
+      <li><a href="#contatti"><i class="fas fa-envelope"></i> Contatti</a></li>
     </ul>
   </nav>
 
   <main class="content">
-    <h1 style="color:white; font-family: 'Water Brush', sans-serif;">Benvenuti nella nostra azienda</h1>
-    <p style="color:white;">L'azienda Zambano Trasporti è un'azienda famigliare attualmente appartenente al geometra Anselmo Zambano. Questa società si trova in Via Carso, 10 fraz. Borgaretto, 10092 Beinasco (TO). L'azienda si occupa di trasporti di oggetti pesanti di diverso tipo.</p>
+    <h1 id="home" style="color:white; font-family: 'Water Brush', sans-serif;">Benvenuti nella nostra azienda</h1>
+    <p style="color:white;">Benvenuti a Zamabno Trasporti!
+
+Siamo un'azienda familiare con una storia di successo che abbraccia oltre 60 anni di esperienza nel settore dei trasporti. L'azienda nasce nel 1963 per mano di Edmondo Zambano per poi successivamente passare ad Anselmo Zambano dopo un pò di anni. Sin dalla nostra fondazione, ci siamo dedicati a fornire soluzioni affidabili e su misura per le esigenze di trasporto dei nostri clienti. Nel corso degli anni, ci siamo evoluti e specializzati per diventare leader nel trasporto di oggetti di grandi dimensioni.
+
+La nostra passione per l'eccellenza e l'attenzione ai dettagli ci hanno permesso di sviluppare una flotta di veicoli all'avanguardia e di formare un piccolo team di esperti altamente qualificati. Siamo orgogliosi di poter offrire una vasta gamma di servizi di trasporto, inclusi trasporti pesanti, trasporti speciali e trasporti eccezionali.
+
+Sappiamo che ogni carico è unico e richiede un approccio personalizzato. I nostri professionisti altamente specializzati lavorano a stretto contatto con i nostri clienti per capire le loro esigenze specifiche e offrire soluzioni su misura. Dalla pianificazione logistica alla gestione delle autorizzazioni, ci occupiamo di tutto il processo per garantire un trasporto sicuro e puntuale.
+
+La nostra reputazione si basa sull'affidabilità, sull'efficienza e sulla cura che mettiamo in ogni trasporto che gestiamo. Siamo consapevoli dell'importanza dei vostri carichi e ci impegniamo a trattarli con la massima attenzione e sicurezza. La vostra soddisfazione è la nostra priorità assoluta.
+
+Se state cercando una società di trasporti affidabile, professionale e con esperienza nel settore dei trasporti di oggetti di grandi dimensioni, Zamabno Trasporti è qui per servirvi. Contattateci oggi stesso per discutere delle vostre esigenze di trasporto e scoprire come possiamo aiutarvi a raggiungere i vostri obiettivi.</p>
   </main>
-</body>
-</html>
+
 
 
   <style>
@@ -73,28 +82,27 @@
   <div class="container">
     <div class="box">
       <h2>Vision</h2>
-      <p>testo del quadrante 1 iiiiiiiiiiiiiiiiiiiiiii iiiiiiiiiiiiiiiii iiiiiiiiiii iiiiiiiiiiiiiiiiiiiii iiiiiiiiii</p>
+      <p> Vogliamo essere riconosciuti come il partner di fiducia per le esigenze di trasporto più complesse e sfidanti. Attraverso la nostra dedizione al servizio clienti, la nostra competenza tecnica e il nostro impegno per l'eccellenza operativa, puntiamo a stabilire nuovi standard di qualità nel settore. Sogniamo un futuro in cui Zamabno Trasporti sia sinonimo di affidabilità, efficienza e soluzioni personalizzate per ogni sfida di trasporto.</p>
     </div>
     <div class="box">
       <h2>Mission</h2>
-      <p>Testo del quadrante 2. iiiiiiiiiiiii iiiiiiiiiiiiiiiiiiiii iiiiiiiiiiiii</p>
+      <p>
+La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensioni di alta qualità, che superino le aspettative dei nostri clienti in termini di sicurezza, affidabilità ed efficienza. Ci impegniamo a offrire soluzioni personalizzate, utilizzando le nostre competenze tecniche e la nostra flotta all'avanguardia per affrontare le sfide più complesse nel campo dei trasporti. Siamo guidati dalla passione per il servizio clienti e ci sforziamo di costruire relazioni a lungo termine basate sulla fiducia e sulla collaborazione. Investiamo costantemente nella formazione e nello sviluppo del nostro team, al fine di mantenere l'eccellenza operativa e di adattarci alle mutevoli esigenze del settore dei trasporti. Siamo orgogliosi del nostro contributo al successo dei nostri clienti, facilitando il trasferimento efficiente e sicuro dei loro carichi di grandi dimensioni.</p>
     </div>
     <div class="box">
       <h2>Values</h2>
-      <p>Testo del quadrante 3. iiiiiiiiiiii iiiiiiiiiiiiiiiiiiiiiiiiiiiii iiiiiiiiiiiiiiiiiiiiiiiiiiiiii iiiiiiiiiiiiiiiii</p>
+      <p>Il nostro valore fondamentale è l'impegno per l'eccellenza. Ci impegniamo a fornire servizi di trasporto di oggetti di grandi dimensioni che rappresentino la massima qualità e professionalità. Siamo guidati dalla costante ricerca della perfezione in tutto ciò che facciamo, dalla pianificazione logistica alla consegna finale. Mettiamo l'accento sull'attenzione ai dettagli e sulla cura nella gestione dei carichi, garantendo che ogni trasporto venga eseguito con la massima precisione e sicurezza. Ci preoccupiamo sinceramente del successo dei nostri clienti e lavoriamo instancabilmente per superare le loro aspettative. La nostra dedizione all'eccellenza si riflette in ogni aspetto del nostro lavoro, offrendo un valore tangibile e duraturo ai nostri clienti.</p>
     </div>
   </div>
-</body>
-</html>
 
 
-<h1 style="color:black; text-align: center">Dove siamo</h1>
+<h1 id="lavori" style="color:black; text-align: center">I nostri lavori</h1>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slideshow di immagini</title>
   <style>
 body {
-  background-image: url(https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/giallo%20mod%203.png?raw=true);
+  background-image: url(https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/sfondo%201%20desaturato.jpg?raw=true);
   background-repeat: repeat-y;
   background-size: 100% auto;
   background-position: center;
@@ -121,7 +129,7 @@ body {
       height: auto;
     }
   </style>
-</head>
+
 <body>
   <div class="slideshow-container">
     <div class="mySlides">
@@ -171,10 +179,9 @@ body {
       setTimeout(showSlides, 2000); // Cambia immagine ogni 2 secondi
     }
   </script>
-</body>
-</html>
 
- <h1 style="color:black; text-align: center">Servizi</h1>
+
+ <h1 id="servizi"style="color:black; text-align: center">Servizi</h1>
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -207,13 +214,15 @@ body {
       color: #fff;
     }
   </style>
-</head>
+
 <body>
   <div class="quadrant">
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%201%20(2).png?raw=true" alt="Immagine 1">
     <div>
       <h2>Sollevamenti industriali</h2>
-      <h3>Siete un'azienda e vi serve lo spostamento un macchinario o un oggetto pesante? Noi ci occupiamo anche di questo genere di problemi.</h3>
+      <h3>Il nostro servizio è focalizzato sul trasporto di elementi industriali di varie dimensioni e pesi, compresi macchinari, componenti, attrezzature e prodotti finiti. Collaboriamo strettamente con i nostri clienti per capire le loro esigenze specifiche e fornire soluzioni personalizzate che soddisfino i loro requisiti di trasporto.
+
+La nostra flotta di veicoli è appositamente progettata per il trasporto di carichi industriali. Disponiamo di camion e rimorchi speciali dotati di attrezzature di sicurezza avanzate e dispositivi di ancoraggio per garantire un trasporto sicuro e senza danni agli elementi industriali.</h3>
     </div>
   </div>
 
@@ -221,7 +230,9 @@ body {
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%20(2).png?raw=true" alt="Immagine 2">
     <div>
       <h2>Trasporto e posa monoblocchi</h2>
-      <h3>Ti serve il trasporto di un oggetto che non può essere smontato? Noi trasportiamo anche questi.</h3>
+      <h3>Ci dedichiamo a offrire soluzioni complete per il trasporto, l'installazione e la messa in posa di monoblocchi prefabbricati, fornendo servizi affidabili e di alta qualità alle aziende e ai progetti di costruzione.
+
+La nostra esperienza e competenza nel settore ci consentono di gestire con successo l'intero processo di trasporto e posa dei monoblocchi. Collaboriamo strettamente con i nostri clienti per capire le loro esigenze specifiche e sviluppare soluzioni personalizzate che soddisfino i requisiti del progetto.</h3>
     </div>
   </div>
 
@@ -229,7 +240,7 @@ body {
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%204%20(1).png?raw=true" alt="Immagine 3">
     <div>
       <h2>Trasporto e posa maxi schermi a led</h2>
-      <h3>Trasportiamo enormi maxi schermi, tra i nostri lavori più conosciuti c'è il trasporto del maxi schermo per il concerto di Vasco Rossi in Sardegna</h3>
+      <h3>L'azienda Zambano Trasporti si occupa anche di trasporto e posa Maxi Schermi a LED. Si tratta di un punto di riferimento nel settore dei trasporti e dell'installazione di grandi schermi a LED. Siamo specializzati nell'offrire soluzioni complete per il trasporto, l'installazione e la messa in posa di maxi schermi a LED, fornendo servizi professionali e di alta qualità per eventi, spettacoli, manifestazioni e progetti di comunicazione visiva.</h3>
     </div>
   </div>
 
@@ -237,7 +248,8 @@ body {
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%205.png?raw=true" alt="Immagine 4">
     <div>
       <h2>Trasporto e posa case in legno</h2>
-      <h3>Trasportiamo anche grandi immobili in legno di diversa dimensione e forma</h3>
+      <h3>La nostra esperienza e competenza nel settore delle costruzioni in legno ci permettono di gestire con successo tutte le fasi del processo di trasporto e posa delle case di legno. 
+La nostra flotta di veicoli è appositamente attrezzata per il trasporto sicuro e protetto delle componenti delle case di legno prefabbricate. Abbiamo mezzi specializzati con gru e attrezzature di sollevamento che garantiscono un carico e uno scarico sicuri. I nostri autisti e operatori sono altamente qualificati e addestrati per maneggiare in modo adeguato i componenti delle case di legno durante il trasporto.</h3>
     </div>
   </div>
 
@@ -245,7 +257,9 @@ body {
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%206.png?raw=true" alt="Immagine 5">
     <div>
       <h2>Trasporto e posa opere d'arte</h2>
-      <h3>Trasporto di statue e oggetti d'arte. i tuoi oggetti veranno trasportati con cura e riguardo</h3>
+      <h3>Con una profonda passione per l'arte e un impegno per la cura e la sicurezza delle opere, offriamo servizi personalizzati per soddisfare le esigenze di artisti, collezionisti e istituzioni culturali.
+
+La nostra esperienza e competenza nel settore delle opere d'arte ci consentono di affrontare con successo le sfide logistiche del trasporto e della posa. Ogni opera d'arte viene trattata con il massimo rispetto e attenzione, sviluppando soluzioni su misura che soddisfino le specifiche esigenze di ciascuna opera.</h3>
     </div>
   </div>
 
@@ -253,7 +267,9 @@ body {
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%203%20(1).png?raw=true" alt="Immagine 6">
     <div>
       <h2>Trasporto e posa alberi secolari</h2>
-      <h3>Il vostro albero non sta più bene dove si trova? noi possiamo spostartelo in totale sicurezza.</h3>
+      <h3> Trasporto e all'installazione di alberi di varie dimensioni e tipologie. Siamo specializzati nel fornire soluzioni complete per il trasporto, la posa e la cura degli alberi, garantendo una corretta integrazione nel paesaggio urbano o naturale.
+
+La nostra esperienza e competenza nel campo degli alberi ci consentono di affrontare con successo i complessi processi di trasporto e posa. </h3>
     </div>
   </div>
 
@@ -261,10 +277,10 @@ body {
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%202%20(2).png?raw=true" alt="Immagine 7">
     <div>
       <h2>Trasporto e posa lastre in pietra</h2>
-      <h3>Vi siete appena trasferiti o avete cambiato il top della cucina in pietra? noi possiamo aiutarti nel trasloco o nello spostamento di questo nuovo oggetto.</h3>
+      <h3>Siamo specializzati nel fornire soluzioni complete per il trasporto, la posa e la lavorazione di lastre in pietra, garantendo risultati di alta qualità e un'estetica impeccabile.</h3>
     </div>
   </div>
-</body>
+
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -390,9 +406,9 @@ body {
       margin-top: 30px;
     }
   </style>
-</head>
+
 <body>
-  <h1 style="color:black; text-align: center">Dove siamo</h1>
+  <h1 id="dove" style="color:black; text-align: center">Dove siamo</h1>
 
   <div class="image-container">
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
@@ -402,7 +418,7 @@ body {
     <div class="container">
       <div class="sidebar">
         <div class="contact-info">
-          <h3>Contatti</h3>
+           <h1 id="contatti"style="color:black; text-align: center">Contatti</h1>
           <p>Telefono: 123456789</p>
           <p>Email: info@example.com</p>
           <a href="https://www.instagram.com/">Instagram</a>
@@ -410,7 +426,7 @@ body {
         </div>
       </div>
       <div class="contact-form-container">
-        <h2>Contattaci per maggiori informazioni</h2>
+        <h1 id="servizi"style="color:black; text-align: center">Scrivici per un preventivo</h1>
         <form action="#" method="post">
           <div class="form-group">
             <label for="name">Nome:</label>
@@ -436,3 +452,63 @@ body {
     &copy; 2023 Zambano Trasporti. Tutti i diritti riservati.
   </div>
 </body>
+  <!DOCTYPE html>
+<html>
+<head>
+  <style>
+    .scroll-to-top {
+      display: none;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      z-index: 99;
+      width: 50px;
+      height: 50px;
+      background-color: #2a2c47;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      outline: none;
+      cursor: pointer;
+    }
+
+    .scroll-to-top:hover {
+      background-color: #777;
+    }
+
+    .scroll-to-top .arrow-icon {
+      display: block;
+      font-size: 24px;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  
+  
+  <!-- Tasto scroll-to-top -->
+  <button onclick="scrollToTop()" class="scroll-to-top" id="scrollToTopButton">
+    <span class="arrow-icon">&#8593;</span>
+  </button>
+
+  <script>
+    // Funzione per tornare in cima alla pagina
+    function scrollToTop() {
+      document.body.scrollTop = 0; // Per i browser Safari
+      document.documentElement.scrollTop = 0; // Per gli altri browser
+    }
+
+    // Mostra o nascondi il tasto in base allo scroll della pagina
+    window.onscroll = function() { scrollFunction() };
+
+    function scrollFunction() {
+      var scrollToTopButton = document.getElementById("scrollToTopButton");
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        scrollToTopButton.style.display = "block";
+      } else {
+        scrollToTopButton.style.display = "none";
+      }
+    }
+  </script>
+</body>
+</html>
