--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
       <li><a href="#lavori"><i class="fas fa-camera-retro"></i> I nostri lavori</a></li>
       <li><a href="#servizi"><i class="fas fa-industry"></i> Servizi</a></li>
+  
+      <li><a href="#referenze"><i class="fas fa-map-marker-alt"></i> Referenze</a></li> 
       <li><a href="#dove"><i class="fas fa-map-marker-alt"></i> Dove trovarci</a></li>
       <li><a href="#contatti"><i class="fas fa-envelope"></i> Contatti</a></li>
     </ul>
@@ -27,9 +29,9 @@
 
   <main class="content">
     <h1 id="home" style="color:white; font-family: 'Water Brush', sans-serif;">Benvenuti nella nostra azienda</h1>
-    <p style="color:white;">Benvenuti a Zamabno Trasporti!
+    <p style="color:white;">Benvenuti a Zamabno Trasporti S.A.S!
 
-Siamo un'azienda familiare con una storia di successo che abbraccia oltre 60 anni di esperienza nel settore dei trasporti. L'azienda nasce nel 1963 per mano di Edmondo Zambano per poi successivamente passare ad Anselmo Zambano dopo un pò di anni. Sin dalla nostra fondazione, ci siamo dedicati a fornire soluzioni affidabili e su misura per le esigenze di trasporto dei nostri clienti. Nel corso degli anni, ci siamo evoluti e specializzati per diventare leader nel trasporto di oggetti di grandi dimensioni.
+Siamo un'azienda familiare con una storia di successo che abbraccia oltre 60 anni di esperienza nel settore dei trasporti. L'azienda nasce nel 1963 per mano di Edmondo Zambano per poi successivamente passare al geometra Anselmo Zambano dopo un pò di anni. Sin dalla nostra fondazione, ci siamo dedicati a fornire soluzioni affidabili e su misura per le esigenze di trasporto dei nostri clienti. Nel corso degli anni, ci siamo evoluti e specializzati per diventare leader nel trasporto di oggetti di grandi dimensioni.
 
 La nostra passione per l'eccellenza e l'attenzione ai dettagli ci hanno permesso di sviluppare una flotta di veicoli all'avanguardia e di formare un piccolo team di esperti altamente qualificati. Siamo orgogliosi di poter offrire una vasta gamma di servizi di trasporto, inclusi trasporti pesanti, trasporti speciali e trasporti eccezionali.
 
@@ -101,7 +103,7 @@ body {
 
     
     .slideshow-container {
-      max-width: 80%;
+      max-width: 95%;
       margin: 0 auto; /* Centra il contenitore orizzontalmente */
       margin-top: 10%; /* Aggiungi spazio superiore */
     }
@@ -181,8 +183,68 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
       <p>Il nostro valore fondamentale è l'impegno per l'eccellenza. Ci impegniamo a fornire servizi di trasporto di oggetti di grandi dimensioni che rappresentino la massima qualità e professionalità. Siamo guidati dalla costante ricerca della perfezione in tutto ciò che facciamo, dalla pianificazione logistica alla consegna finale. Mettiamo l'accento sull'attenzione ai dettagli e sulla cura nella gestione dei carichi, garantendo che ogni trasporto venga eseguito con la massima precisione e sicurezza. Ci preoccupiamo sinceramente del successo dei nostri clienti e lavoriamo instancabilmente per superare le loro aspettative. La nostra dedizione all'eccellenza si riflette in ogni aspetto del nostro lavoro, offrendo un valore tangibile e duraturo ai nostri clienti.</p>
     </div>
   </div>
+ <h1 id="referenze" style="color:black; text-align: center">Referenze</h1>
+<h2 style="text-align: center; color:black">Trasporto per un'azienda vinicola</h2>
+
+  
+  
+  
+  
+  <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    /* Stili personalizzati per il grid delle immagini */
+    .my-image-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    .my-image-grid .image-container {
+      flex-basis: calc(33.33% - 20px);
+      margin-bottom: 20px;
+    }
+
+    .my-image-grid .image-container img {
+      width: 100%;
+      height: auto;
+    }
+
+    /* Altri stili della tua pagina */
+    /* ... */
+
+  </style>
+</head>
+<body>
+  <div>
+    <!-- Altri elementi e contenuti della pagina -->
+  </div>
+
+  <div class="my-image-grid">
+    <div class="image-container">
+      <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/18821f3d-c7c4-4939-953f-4e42a0a49858.jpg?raw=true" alt="Image 1">
+    </div>
+    <div class="image-container">
+      <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/2faa4400-e78e-437b-bc62-0b7332f68c18.jpg?raw=true" alt="Image 2">
+    </div>
+    <div class="image-container">
+      <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/c96cfea6-4312-4d8d-98ef-4f37cbe27df9.jpg?raw=true" alt="Image 3">
+    </div>
+  </div>
+
+  <div>
+    <!-- Altri elementi e contenuti della pagina -->
+  </div>
+  
+  
+  
  <h1 id="servizi"style="color:black; text-align: center">Servizi</h1>
 
+  
+  
+  
+  
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
@@ -214,7 +276,8 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
       color: #fff;
     }
   </style>
-
+  
+ 
 <body>
   <div class="quadrant">
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Opera-senza-titolo%201%20(2).png?raw=true" alt="Immagine 1">
@@ -407,8 +470,12 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
     }
   </style>
 
+  
+  
 <body>
-  <h1 id="dove" style="color:black; text-align: center">Dove siamo</h1>
+  <h1 id="dove" style="color:black; text-align: center">Contatti</h1>
+<h2 style="text-align: center; color:black">Via Carso, 10 - 10092 Beinasco (TO)</h2>
+
 
   <div class="image-container">
     <img src="https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/Immagine%20maps.png?raw=true" alt="Immagine" />
@@ -418,9 +485,9 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
     <div class="container">
       <div class="sidebar">
         <div class="contact-info">
-           <h1 id="contatti"style="color:black; text-align: center">Contatti</h1>
-          <p>Telefono: 123456789</p>
-          <p>Email: info@example.com</p>
+           <h1 id="contatti"style="color:White; text-align: center">Contatti</h1>
+          <p>Telefono: 0113589502 </p>
+          <p>Email: zambano.trasporti@gmail.com</p>
           <a href="https://www.instagram.com/">Instagram</a>
           <a href="https://www.facebook.com/">Facebook</a>
         </div>
@@ -512,4 +579,5 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
   </script>
 </body>
 </html>
+
 
