--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ Se state cercando una società di trasporti affidabile, professionale e con espe
 
  
 
+<h1 id="lavori" style="color:	#f5fffa; text-align: center"><strong>I NOSTRI LAVORI</strong></h1>
 
-<h1 id="lavori" style="color:black; text-align: center">I nostri lavori</h1>
 
   
     <title>Pagina con sfondo fisso</title>
@@ -165,8 +165,8 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
       <p>Il nostro valore fondamentale è l'impegno per l'eccellenza. Ci impegniamo a fornire servizi di trasporto di oggetti di grandi dimensioni che rappresentino la massima qualità e professionalità. Siamo guidati dalla costante ricerca della perfezione in tutto ciò che facciamo, dalla pianificazione logistica alla consegna finale. Mettiamo l'accento sull'attenzione ai dettagli e sulla cura nella gestione dei carichi, garantendo che ogni trasporto venga eseguito con la massima precisione e sicurezza. Ci preoccupiamo sinceramente del successo dei nostri clienti e lavoriamo instancabilmente per superare le loro aspettative. La nostra dedizione all'eccellenza si riflette in ogni aspetto del nostro lavoro, offrendo un valore tangibile e duraturo ai nostri clienti.</p>
     </div>
   </div>
- <h1 id="referenze" style="color:black; text-align: center">Referenze</h1>
-<h2 style="text-align: center; color:black">Trasporto per un'azienda vinicola</h2>
+ <h1 id="referenze" style="color:	#f5fffa; text-align: center"><strong>REFERENZE</strong></h1>
+<h2 style="text-align: center; color:WHITE">Trasporto per un'azienda vinicola</h2>
 
   
   
@@ -221,7 +221,7 @@ La nostra missione è fornire servizi di trasporto di oggetti di grandi dimensio
   
   
   
- <h1 id="servizi"style="color:black; text-align: center">Servizi</h1>
+ <h1 id="servizi" style="color:	#f5fffa; text-align: center"><strong>SERVIZI</strong></h1>
 
   
   
@@ -357,7 +357,7 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
       display: flex;
       flex-wrap: wrap;
       max-width: 900px;
-      background-color: #f1f1f1;
+      background-color: rgba(52, 77, 131, 0.7); /* Opacità impostata a 0.5 (50%) */
       border-radius: 5px;
       overflow: hidden;
       padding: 20px;
@@ -455,8 +455,8 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
   
   
 
-  <h1 id="dove" style="color:black; text-align: center">Contatti</h1>
-<h2 style="text-align: center; color:black">Via Carso, 10 - 10092 Beinasco (TO)</h2>
+ <h1 id="dove" style="color:	#f5fffa; text-align: center"><strong>DOVE SIAMO</strong></h1>
+<h2 style="text-align: center; color:WHITE">Via Carso, 10 - 10092 Beinasco (TO)</h2>
 
 
   <div class="image-container">
@@ -467,7 +467,7 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
     <div class="container">
       <div class="sidebar">
         <div class="contact-info">
-           <h1 id="contatti"style="color:White; text-align: center">Contatti</h1>
+           <h1 id="contatti"style="color:White; text-align: center">Contattaci</h1>
           <p>Telefono: 0113589502 </p>
           <p>Email: zambano.trasporti@gmail.com</p>
           <a href="https://www.instagram.com/">Instagram</a>
@@ -559,4 +559,3 @@ La nostra esperienza e competenza nel campo degli alberi ci consentono di affron
   </script>
 </body>
 </html>
-
